--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,10 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
+    
+    <!-- flash messages -->
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
     <!-- content -->
     <div class="container"  role="main">
