--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -5,4 +5,11 @@
 <h2>Minimum Height: <%= @attraction.min_height %> inches</h2>
 <br>
 <br>
-<%= button_to "Go on this ride", take_ride_path, method: :post, params: {ride_id: @ride.id} %>
+<% if admin? %>
+  <%= link_to "Edit Attraction", edit_attraction_path(@attraction) %>
+<% else %>
+  <%= form_for Ride.new, url: take_ride_path do |f| %>
+    <%= f.hidden_field :attraction_id, value: @attraction.id %>
+    <%= f.submit value: "Go on this ride"%>
+  <% end %>
+<% end %>
